2006-11-01  Daniel Steffen  <das@users.sourceforge.net>

	* generic/tclEnv.c (Darwin): mark _environ symbol as unexported.

2006-10-31  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* rules.vc: Fix bug #1582769 build with VC2003 and correct i386 arch.

2006-10-23  Don Porter  <dgp@users.sourceforge.net>

	* README:		Bump version number to 8.4.15
	* generic/tcl.h:
	* tools/tcl.wse.in:
	* unix/configure.in:
	* unix/tcl.spec:
	* win/README.binary:
	* win/configure.in:

	* unix/configure:	autoconf-2.13
	* win/configure:

2006-10-18  Pat Thoyts  <patthoyts@users.sourceforge.net>

	*** 8.4.14 TAGGED FOR RELEASE ***

	* win/nmakehlp.c: Ensure builds with VC6 without Platform SDK.
	* win/rules.vc:   Pickup MACHINE from environment.

2006-10-17  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclIOUtil.c:	Cleaned up some code flagged by a
	* generic/tclInt.h:	`make checkexports` test.
	* win/tclWin32Dll.c:
	* win/tclWinFile.c:
	
2006-10-16  Daniel Steffen  <das@users.sourceforge.net>

	* changes: updates for 8.4.14 release.

	* macosx/Makefile: don't redo prebinding of non-prebound binaires.

2006-10-11  Andreas Kupries  <andreask@activestate.com>

	* generic/tclPkg.c (Tcl_PkgRequireEx): Corrected crash when
	  argument version==NULL passed in. Backport of the fix for the
	  same problem in 8.5.

2006-10-10  Don Porter  <dgp@users.sourceforge.net>

	* changes:		changes updated for 8.4.14 release.

2006-10-06  Jeff Hobbs  <jeffh@ActiveState.com>

	* tests/http.test: update tests to handle strictness change.

2006-10-06  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* win/rules.vc: bug #1571954: avoid /RTCc flag with MSVC8

2006-10-05  Jeff Hobbs  <jeffh@ActiveState.com>

	* library/http/http.tcl (http::geturl): only do geturl url rfc
	3986 validity checking if $::http::strict is true (default false
	for 8.4).  [Bug 1560506]

	* generic/tcl.h: note limitation on changing Tcl_UniChar size
	* generic/tclEncoding.c (UtfToUnicodeProc, UnicodeToUtfProc): 